name:                blog
version:             0.1.0.0
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          danny.gratzer@gmail.com
build-type:          Simple
cabal-version:       >=1.10
executable blog
  main-is: site.hs
  build-depends:       base,
                       hakyll
  default-language:    Haskell2010